# audi-canbus-monitor

./: Cargo.toml  README.md  docker-compose.yaml  slcan_setup.sh
.cargo/: config.toml
docs/: Decoder.md  RustEmbeddedApplication.md
grafana/: grafana.db
influxdb2/: influx-configs
python/: audi_a3_8p_05.dbc  can_analyze.py  requirements.txt  vw_mqb_2010.dbc
